@@ -268,4 +268,4 @@ Fixes:
     * Evas: Don't try blend on gl backened if the render option is COPY
     * Evas text: Fixed line size calculation when using multiple fonts.
     * Evas: Fix crash if app use native surface in wrong engine.
-
+    * Edje entry: return surrounding string until the start position of selection
