@@ -1,3 +1,7 @@
+2013-05-14  Jihoon Kim
+
+        * Edje entry: return surrounding string until the start position of selection
+
 2013-05-13  Thiep Ha
 
         * Edje: Added selection handlers to entry.
